modifications to errror handling, button double press fix, and one more thing i cant remember